fix: fix rcmd tab dark mode gradient (#799)
* fix: fix rcmd tab dark mode gradient

* Update videoPage.scss

---------

--- a/src/styles/adaptedStyles/videoPage.scss
+++ b/src/styles/adaptedStyles/videoPage.scss
@@ -169,18 +169,25 @@
 
   // #region dark mode adaption part
   &.dark {
-
-    .note-list .note-card-container .note-card,
-    .resizable-component .ql-tag-blot .time-tag-item,
-    .ql-toolbar {
-      background-color: var(--bew-fill-1);
-    }
-
     .video-ai-assistant .video-ai-assistant-bg::before,
     .note-pc .note-container .note-header .back-note-list:hover,
     .note-pc .note-container .note-header .jump-note-package:hover,
     .note-pc .note-container .note-header .close-note:hover {
       background: var(--bew-fill-2);
+    }
+
+    .rcmd-tab-switcher .rcmd-tab-move.right .rcmd-tab-move-inner {
+      background: linear-gradient(270deg, var(--bew-bg) 61.53%, transparent 100%);
+    }
+    
+    .rcmd-tab-switcher .rcmd-tab-move.left .rcmd-tab-move-inner {
+      background: linear-gradient(90deg, var(--bew-bg) 61.53%, transparent 100%);
+    }
+
+    .note-list .note-card-container .note-card,
+    .resizable-component .ql-tag-blot .time-tag-item,
+    .ql-toolbar {
+      background-color: var(--bew-fill-1);
     }
 
     .note-pc .note-container,
